changed characters.json to contacts.json

--- a/app/characters/character.component.html
+++ b/app/characters/character.component.html
@@ -9,7 +9,7 @@
 
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       <label class="mdl-textfield__label" for="sidetext">Side</label>
-      <input type="text" id="sidetext" class="mdl-textfield__input" [(ngModel)]="editCharacter.side" />
+      <input type="text" id="sidetext" class="mdl-textfield__input" [(ngModel)]="editCharacter.type" />
     </div>
 
     <div>
