--- a/app/dashboard/dashboard.component.html
+++ b/app/dashboard/dashboard.component.html
@@ -3,12 +3,12 @@
   <div>
     <div class="mdl-grid">
       <div class="mdl-cell mdl-cell--3-col"
-        *ngFor="#character of characters | async"
+        *ngFor="#contact of contacts | async"
         (click)="gotoDetail(character)">
 
         <button class="dashboard-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect
       mdl-button--accent">
-          {{character.name}}
+          {{contact.name}}
         </button>
 
       </div>
