changed characters to contacts

--- a/app/dashboard/dashboard.component.html
+++ b/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     <div class="mdl-grid">
       <div class="mdl-cell mdl-cell--3-col"
         *ngFor="#contact of contacts | async"
-        (click)="gotoDetail(character)">
+        (click)="gotoDetail(contact)">
 
         <button class="dashboard-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect
       mdl-button--accent">
