updated contact to opc contact record

--- a/app/dashboard/dashboard.component.html
+++ b/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
 
         <button class="dashboard-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect
       mdl-button--accent">
-          {{contact.name}}
+          {{contact.company_name}}
         </button>
 
       </div>
