--- a/app/contacts/contact-list.component.html
+++ b/app/contacts/contact-list.component.html
@@ -11,7 +11,7 @@
       <div class="mdl-card mdl-shadow--2dp">
         <div class="mdl-card__title">
           <h2 class="mdl-card__title-text">{{contact.id}}.
-{{contact.name}}</h2>
+{{contact.company_name}}</h2>
         </div>
         <div class="mdl-card__menu">
           <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect" [routerLink]="['Contact', {id: contact.id}]">
