--- a/app/contacts/contact.component.html
+++ b/app/contacts/contact.component.html
@@ -1,10 +1,10 @@
 <article class="template animated slideInRight">
   <div *ngIf="contact">
-    <h4>{{editContact.company_name | uppercase}} details</h4>
+    <h4>{{editContact.last_name | uppercase}} details</h4>
 
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       <label class="mdl-textfield__label" for="nametext">Name</label>
-      <input type="text" id="nametext" class="mdl-textfield__input" [(ngModel)]="editContact.company_name" />
+      <input type="text" id="nametext" class="mdl-textfield__input" [(ngModel)]="editContact.last_name" />
     </div>
 
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
