modified story-contact to contact-component

--- a/app/contacts/contact.component.html
+++ b/app/contacts/contact.component.html
@@ -8,8 +8,8 @@
     </div>
 
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <label class="mdl-textfield__label" for="sidetext">Type</label>
-      <input type="text" id="sidetext" class="mdl-textfield__input" [(ngModel)]="editContact.type" />
+      <label class="mdl-textfield__label" for="typetext">Type</label>
+      <input type="text" id="typetext" class="mdl-textfield__input" [(ngModel)]="editContact.type" />
     </div>
 
     <div>
