added login routing

--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -5,12 +5,12 @@
 
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <label class="mdl-textfield__label" for="nametext">OnePageCRM User Name (Parr email address)</label>
-        <input type="text" id="nametext" class="mdl-textfield__input" [(ngModel)]="loginUser.user_name" />
+        <input type="text" id="nametext" class="mdl-textfield__input" [(ngModel)]="user_name" />
       </div>
 
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <label class="mdl-textfield__label" for="typetext">Password</label>
-        <input type="text" id="typetext" class="mdl-textfield__input" [(ngModel)]="loginUser.password" />
+        <input type="text" id="typetext" class="mdl-textfield__input" [(ngModel)]="password" />
       </div>
       <div>
         <button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect
