Add Login Service

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
-      <a class="md-title-icon" href="http://pluralsight.com" target="_blank"><i></i></a>
+      <!--a class="md-title-icon" href="http://pluralsight.com" target="_blank"><i></i></a-->
       <span class="mdl-layout-title">Parr Cabinet Design - Special Order Confirmation Tracker</span>
       <button id="reset-button" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--accent mdl-button--raised" (click)="resetDb()">Reset Data</button>
     </div>
