--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -6,17 +6,14 @@
             <div class="mdl-grid">
 
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <label class="mdl-textfield__label" for="user_name">OnePageCRM User Name (Parr email
-                        address)</label>
-                    <input type="text" id="user_name" class="mdl-textfield__input"
-                           [(ngModel)]="editUserLogin.user_name"/>
+                    <label class="mdl-textfield__label" for="user_name">User Name</label>
+                    <input type="text" id="user_name" class="mdl-textfield__input" [(ngModel)]="editUserLogin.user_name"/>
                 </div>
 
                 &nbsp;&nbsp;&nbsp;
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                     <label class="mdl-textfield__label" for="passwordtext">Password</label>
-                    <input type="text" id="passwordtext" class="mdl-textfield__input"
-                           [(ngModel)]="editUserLogin.password"/>
+                    <input type="text" id="passwordtext" class="mdl-textfield__input" [(ngModel)]="editUserLogin.password"/>
                 </div>
 
                 &nbsp;&nbsp;&nbsp;
